# AutoGif

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSES.txt  Makefile  NOTICE  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup-binaries.sh
autogif/: config.py  main.py  processing.py  user_settings.py
autogif/effects/: effect_base.py
autogif/effects/plugins/: effect_bounce.py  effect_brush_stroke.py  effect_fade.py  effect_glitch.py  effect_glow.py  effect_neon.py  effect_rainbow.py  effect_shake.py  effect_slam.py  effect_sparkle.py  effect_typewriter.py  effect_vhs_crt.py  effect_wave.py
resources/_internal/websockets-15.0.1.dist-info/: RECORD
resources/_internal/wheel-0.45.1.dist-info/: RECORD
